# lsapy

./: README.md  __init__.py  developping.py  environment.yml  functions.py  landsuitability.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  issue-template.md
.github/workflows/: testpypi.yml
core/: __init__.py  _landsuitability.py
criteria/: __init__.py  _criteria.py
criteria/indicators/: __init__.py  _indicator.py
docs/notebooks/: introduction.ipynb
indicators/: __init__.py
src/lsapy/: __init__.py  criteria.py  functions.py  lsa.py  statistics.py  utils.py
src/lsapy/core/: __init__.py
src/lsapy/criteria/: __init__.py  _criteria.py
src/lsapy/tutorial/: utils.py
testing/data/: soil_sample.nc
tutorial/data/: soil_sample.nc
