[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsapy"
version = "0.1.0.dev1"
authors = [
  { name="Baptiste Hamon", email="baptiste.hamon@pg.canterbury.ac.nz" },
]
description = "Land Suitability Analysis for Python"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["LSAPy", "Land Suitability Analysis", "GIS"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/baptistehamon/lsapy"
Issues = "https://github.com/baptistehamon/lsapy/issues"