[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lsapy"
authors = [
  { name="Baptiste Hamon", email="baptiste.hamon@pg.canterbury.ac.nz" },
]
maintainers = [
  { name="Baptiste Hamon", email="baptiste.hamon@pg.canterbury.ac.nz" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["LSAPy", "Land Suitability Analysis", "GIS", "Spatial Analysis", "Geography"]
license = {file = "LICENSE"}
classifiers = [
    "Private :: Do Not Upload", # Remove this line to publish
    "Development Status :: 2 - Pre-Alpha"
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["description", "version"]

[project.urls]
Homepage = "https://github.com/baptistehamon/lsapy"
Issues = "https://github.com/baptistehamon/lsapy/issues"